--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "js-cookie": "^3.0.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-intersection-observer": "^9.4.0",
+    "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
+    "redux-persist": "^6.0.0",
+    "redux-persist-cookie-storage": "^1.0.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
