chore: admin pages

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -29,6 +29,9 @@
             "@images/*": [
                 "public/images/*"
             ]
-        }
-    }
+        },
+    },
+    "exclude": [
+        "node_modules"
+    ]
 }
