--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "next": "12.2.5",
     "react": "18.2.0",
@@ -23,7 +24,8 @@
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
-    "redux-persist-cookie-storage": "^1.0.0"
+    "redux-persist-cookie-storage": "^1.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
