--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-intersection-observer": "^9.4.0",
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
+    "react-toastify": "^9.0.8",
     "redux-persist": "^6.0.0",
     "redux-persist-cookie-storage": "^1.0.0",
     "yup": "^0.32.11"
