--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "bootstrap": "^5.2.0",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
+    "moment": "^2.29.4",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-froala-wysiwyg": "^4.0.14",
     "react-intersection-observer": "^9.4.0",
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
