--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-froala-wysiwyg": "^4.0.14",
     "react-intersection-observer": "^9.4.0",
+    "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.2",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.0.8",
