--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "nodemon server/server.js server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production nodemon server/server.js server.js",
     "lint": "next lint",
     "export": "next build && next export"
   },
@@ -14,6 +14,8 @@
     "animate.css": "^4.1.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "cross-env": "^7.0.3",
+    "express": "^4.18.1",
     "formik": "^2.2.9",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
@@ -41,11 +43,12 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "sass": "^1.54.6"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
+    "pages/**/*.{js,jsx,ts,tsx}": [
       "prettier --write",
       "eslint --fix --no-ignore"
     ]
