--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-froala-wysiwyg": "^4.0.14",
+    "react-ga": "^3.3.1",
     "react-intersection-observer": "^9.4.0",
     "react-loading-skeleton": "^3.1.0",
     "react-redux": "^8.0.2",
