--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "apexcharts": "^3.35.5",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "craco": "^0.0.3",
@@ -16,6 +17,7 @@
     "js-cookie": "^3.0.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-froala-wysiwyg": "^4.0.14",
